--- a/style.css
+++ b/style.css
@@ -48,6 +48,10 @@
     justify-content: center;
     align-items: top;
 }
+#video-section iframe{
+    border-radius: 20px;
+    border: 1px solid black;
+}
 #video-section-title{
     color: #247BA0;
 }
@@ -57,26 +61,22 @@
     text-align: justify;
 }
 #carousel-section{
-background-color: #247BA0;
-padding-top: 80px;
-padding-bottom: 80px;
+    background-color: #247BA0;
+    padding: 80px 0;
 }
 #carousel-title{
     color: #EAECE5;
     text-align: center;
     font-size: 32px;
     line-height: 48px;
-    margin-bottom: 64px;
 }
 #divcards{
-    display: grid;
-    grid-auto-flow: column;
-}
-.cards{
-    margin-left: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    column-gap: 30px;
 }
 .arrows{
-    height: 120px;
     height: 120px;
     margin-top: 18%; /*aqui estou usando 48% da minha divisão na margem da seta*/
     cursor: pointer;
