--- a/style.css
+++ b/style.css
@@ -74,11 +74,13 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     column-gap: 30px;
+    padding-top: 30px;
 }
 .arrows{
-    height: 120px;
-    margin-top: 18%; /*aqui estou usando 48% da minha divisão na margem da seta*/
+    height: 90px;
+    margin: 0;
     cursor: pointer;
 }
 .arrows:hover{
