--- a/style.css
+++ b/style.css
@@ -72,12 +72,25 @@
     font-size: 32px;
     line-height: 48px;
 }
-.slide-container {
-    margin-top: 40px;
+.body1{
     display: flex;
     align-items: center;
     justify-content: center;
 }
+.slide-container {
+    margin-top: 40px;
+    display: flex;
+    max-width: 1120px;
+    width: 100%;
+    background-color: green;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+}
+.slide-content {
+    margin: 0 40px;
+}
+
 #form-section{
     width: 100%;
     height: 100%;
