--- a/style.css
+++ b/style.css
@@ -73,23 +73,57 @@
     line-height: 48px;
 }
 .body1{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    position: relative;
 }
-.slide-container {
+.swiper {
     margin-top: 40px;
+    width: 70%;
+}
+.swiper-slide {
+    text-align: center;
     display: flex;
-    max-width: 1300px;
-    width: 100%;
-    background-color: green;
-    align-items: center;
     justify-content: center;
-    padding: 10px;
+    align-items: center;
+  }
+.swiper-slide img {
+    display: block;
+    width: 100%;
 }
-.slide-content {
-    margin: 0 40px;
-}
+@media only screen and (min-width: 769px) {
+    .swiper-slide:first-child {
+      transition: transform 100ms;
+    }
+
+    .swiper-slide:first-child img {
+      transition: box-shadow 500ms;
+    }
+
+    .swiper-slide.swiper-slide-active:first-child {
+      transform: translateX(50%);
+      z-index: 2;
+    }
+
+    .swiper-slide.swiper-slide-active:first-child img {
+      box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
+    }
+
+    .swiper-slide:nth-child(2) {
+      transition: transform 100ms;
+    }
+
+    .swiper-slide.swiper-slide-next:nth-child(2) {
+      transform: translateX(55%);
+      z-index: 1;
+    }
+
+    .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
+      transform: translateX(-50%);
+    }
+
+    .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
+      transform: translateX(-55%);
+    }
+  }
 
 #form-section{
     width: 100%;
