--- a/style.css
+++ b/style.css
@@ -84,10 +84,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 .swiper-slide img {
     display: block;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 @media only screen and (min-width: 769px) {
     .swiper-slide:first-child {
