--- a/style.css
+++ b/style.css
@@ -74,11 +74,12 @@
 }
 .body1{
     width: 100%;
-    position: relative;
 }
 .swiper {
     margin-top: 40px;
-    width: 70%;
+    width: 50%;
+    height: 80%;
+    
 }
 .swiper-slide {
     text-align: center;
@@ -92,41 +93,6 @@
     height: 100%;
     object-fit: cover;
 }
-@media only screen and (min-width: 769px) {
-    .swiper-slide:first-child {
-      transition: transform 100ms;
-    }
-
-    .swiper-slide:first-child img {
-      transition: box-shadow 500ms;
-    }
-
-    .swiper-slide.swiper-slide-active:first-child {
-      transform: translateX(50%);
-      z-index: 2;
-    }
-
-    .swiper-slide.swiper-slide-active:first-child img {
-      box-shadow: 0px 32px 80px rgba(0, 0, 0, 0.35);
-    }
-
-    .swiper-slide:nth-child(2) {
-      transition: transform 100ms;
-    }
-
-    .swiper-slide.swiper-slide-next:nth-child(2) {
-      transform: translateX(55%);
-      z-index: 1;
-    }
-
-    .swiper[dir="rtl"] .swiper-slide.swiper-slide-active:first-child {
-      transform: translateX(-50%);
-    }
-
-    .swiper[dir="rtl"] .swiper-slide.swiper-slide-next:nth-child(2) {
-      transform: translateX(-55%);
-    }
-  }
 
 #form-section{
     width: 100%;
