--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
     margin-bottom: 0px;
 }
 #top-menu{
-    background-image: url(images/backgroung-topmenu.svg); /* a background da imagem do menu superior
+    background-image: url("./images/backgroung-topmenu.svg"); /* a background da imagem do menu superior
      é feito dessa forma e utilizando o css style*/
     color: aliceblue; /* esta é a cor da minha fonte no menu superior*/
     background-size: cover; /* uso isto para meu background não bugar ao
@@ -64,7 +64,6 @@
 }
 #carousel-section{
     background-color: #247BA0;
-    padding: 80px 0;
 }
 #carousel-title{
     color: #EAECE5;
@@ -74,12 +73,12 @@
 }
 .body1{
     width: 100%;
+    background-color: #247BA0;
 }
 .swiper {
     margin-top: 40px;
     width: 50%;
-    height: 80%;
-    
+    height: 80%; 
 }
 .swiper-slide {
     text-align: center;
@@ -88,7 +87,6 @@
     align-items: center;
 }
 .swiper-slide img {
-    display: block;
     width: 100%;
     height: 100%;
     object-fit: cover;
